@@ -1,5 +1,6 @@
 2012-05-15  Kirit Saelensminde  <kirit@felspar.com>
  Fixed a problem where the create operation would always convert values to strings. This broke `null` values sent over the wire.
+ Set a httplib2 option so that SSL certificates are not checked.
 
 2012-05-14  Kirit Saelensminde  <kirit@felspar.com>
  Treat any request whose Content-Type starts with 'application/json' as JSON rather than look for an exact match.
